force-app/main/default/objects/PaymentPlan__c/PaymentPlan__c.object-meta.xml
<CustomObject>
    <label>Payment Plan</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Payment Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>