force-app/main/default/objects/PaymentPlan__c/fields/Bank2_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank2_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bank 2 Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>