force-app/main/default/objects/PaymentPlan__c/fields/Banking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Banking_Fee__c</fullName>
    <defaultValue>35</defaultValue>
    <label>Banking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>