force-app/main/default/objects/PaymentPlan__c/fields/Cancelled_Count__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Count__c</fullName>
    <description>Count of Payment Schedule Items with Status = Cancelled</description>
    <label>Cancelled Count</label>
    <summaryFilterItems>
        <field>Payment_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>