force-app/main/default/objects/PaymentPlan__c/fields/Cleared_Program_Fee_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Program_Fee_Sum__c</fullName>
    <description>Sum of Program_Fee_Amount__c for items with Status = Cleared</description>
    <label>Cleared Program Fee Sum</label>
    <summarizedField>Payment_Schedule_Item__c.Program_Fee_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>