force-app/main/default/objects/PaymentPlan__c/fields/First_Payment_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date_Rollup__c</fullName>
    <description>Earliest Payment_Date__c from Payment Schedule Items</description>
    <label>First Payment Date (Rollup)</label>
    <summarizedField>Payment_Schedule_Item__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>