force-app/main/default/objects/PaymentPlan__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the active version for the opportunity</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>