force-app/main/default/objects/PaymentPlan__c/fields/Last_Payment_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date_Rollup__c</fullName>
    <description>Latest Payment_Date__c from Payment Schedule Items</description>
    <label>Last Payment Date (Rollup)</label>
    <summarizedField>Payment_Schedule_Item__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>