force-app/main/default/objects/PaymentPlan__c/fields/NSF_Savings_Sum__c.field-meta.xml
<CustomField>
    <fullName>NSF_Savings_Sum__c</fullName>
    <description>Sum of Savings_Balance__c for items with Status = NSF</description>
    <label>NSF Savings Sum</label>
    <summarizedField>Payment_Schedule_Item__c.Savings_Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>NSF</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>