force-app/main/default/objects/PaymentPlan__c/fields/Payment_Schedule_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_JSON__c</fullName>
    <label>Payment Schedule JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>