force-app/main/default/objects/PaymentPlan__c/fields/Preferred_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Day_of_Week__c</fullName>
    <label>Preferred Day of Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>