force-app/main/default/objects/PaymentPlan__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the previous version of this payment plan</description>
    <label>Previous Version</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Next Versions</relationshipLabel>
    <relationshipName>Next_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>