force-app/main/default/objects/PaymentPlan__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCG DEBT</fullName>
            </value>
            <value>
                <fullName>DCG MOD</fullName>
                <default>true</default>
                <label>DCG MOD</label>
            </value>
            <value>
                <fullName>DCG MOD CA</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>DCG_DEBT</fullName>
                <isActive>false</isActive>
                <label>DCG_DEBT</label>
            </value>
            <value>
                <fullName>DCG_MOD</fullName>
                <isActive>false</isActive>
                <label>DCG_MOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>