force-app/main/default/objects/PaymentPlan__c/fields/Schedule_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item_Count__c</fullName>
    <label>Schedule Item Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>