force-app/main/default/objects/PaymentPlan__c/fields/Schedule_Item_Count_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item_Count_Rollup__c</fullName>
    <description>Count of all Payment Schedule Items</description>
    <label>Schedule Item Count (Rollup)</label>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>