force-app/main/default/objects/PaymentPlan__c/fields/Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Percentage__c</fullName>
    <label>Settlement Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>