force-app/main/default/objects/PaymentPlan__c/fields/Setup_Fee_Payments__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Payments__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Setup Fee Payments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>