force-app/main/default/objects/PaymentPlan__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI</fullName>
                <default>true</default>
                <label>UI</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>