force-app/main/default/objects/PaymentPlan__c/fields/Target_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Target_Payment_Percent__c</fullName>
    <description>Target payment slider percentage value (e.g., 41.1 for 41.1%). Used to restore slider position when loading a plan.</description>
    <label>Target Payment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>