force-app/main/default/objects/PaymentPlan__c/fields/Total_Amount_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Cleared__c</fullName>
    <description>Sum of Cleared_Amount__c from all Payment Schedule Items. Represents total amount cleared including wired payments.</description>
    <label>Total Amount Cleared</label>
    <summarizedField>Payment_Schedule_Item__c.Cleared_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>