force-app/main/default/objects/PaymentPlan__c/fields/Total_Banking_Fee_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Banking_Fee_Rollup__c</fullName>
    <description>Sum of all Banking_Fee_Amount__c from Payment Schedule Items</description>
    <label>Total Banking Fee (Rollup)</label>
    <summarizedField>Payment_Schedule_Item__c.Banking_Fee_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>