force-app/main/default/objects/PaymentPlan__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>Total Debt</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>