force-app/main/default/objects/PaymentPlan__c/fields/Total_Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Draft_Amount__c</fullName>
    <description>Sum of all Total_Payment__c from Payment Schedule Items</description>
    <label>Total Draft Amount</label>
    <summarizedField>Payment_Schedule_Item__c.Total_Payment__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>