force-app/main/default/objects/PaymentPlan__c/fields/Total_Program_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Cost__c</fullName>
    <label>Total Program Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>