force-app/main/default/objects/PaymentPlan__c/fields/Total_Savings_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings_Rollup__c</fullName>
    <description>Sum of all Savings_Balance__c from Payment Schedule Items</description>
    <label>Total Savings (Rollup)</label>
    <summarizedField>Payment_Schedule_Item__c.Savings_Balance__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>