force-app/main/default/objects/PaymentPlan__c/fields/Total_To_Escrow_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_To_Escrow_Rollup__c</fullName>
    <description>Sum of all To_Escrow_Amount__c from Payment Schedule Items</description>
    <label>Total To Escrow (Rollup)</label>
    <summarizedField>Payment_Schedule_Item__c.To_Escrow_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Schedule_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>