force-app/main/default/objects/PaymentPlan__c/fields/Version_Type__c.field-meta.xml
<CustomField>
    <fullName>Version_Type__c</fullName>
    <description>Type of version - Initial, Revision, or Auto Update</description>
    <label>Version Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Auto_Update</fullName>
                <label>Auto Update</label>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>