force-app/main/default/objects/PaymentPlan__c/fields/Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment__c</fullName>
    <label>Weekly Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>